objects/SVMXC__SPM_Average_Response_Time__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Average Response Time is metric to communicate visits that were done within the specified SLA.</description>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look to Account</description>
        <inlineHelpText>Look to Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response_Time__c</fullName>
        <description>Duration of minutes in which Initial Response captured</description>
        <inlineHelpText>Duration of minutes in which Initial Response captured</inlineHelpText>
        <label>Actual Initial Response Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Onsite_Response_Time__c</fullName>
        <description>Duration of minutes in which Onsite Response captured</description>
        <inlineHelpText>Duration of minutes in which Onsite Response captured</inlineHelpText>
        <label>Actual Onsite Response Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Resolution_Time__c</fullName>
        <description>Duration of minutes in which Resolution captured</description>
        <inlineHelpText>Duration of minutes in which Resolution captured</inlineHelpText>
        <label>Actual Resolution Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Restoration_Time__c</fullName>
        <description>Duration of minutes in which Restoration captured</description>
        <inlineHelpText>Duration of minutes in which Restoration captured</inlineHelpText>
        <label>Actual Restoration Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Calculation_Method__c</fullName>
        <description>This field is used to capture calculation method.</description>
        <inlineHelpText>This field is used to capture calculation method.</inlineHelpText>
        <label>Calculation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case</description>
        <inlineHelpText>Lookup to Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_Name__c</fullName>
        <description>This field is used to capture configuration name.</description>
        <inlineHelpText>This field is used to capture configuration name.</inlineHelpText>
        <label>Configuration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Extension_Time__c</fullName>
        <description>Number of minutes by which clock was extended by the technician</description>
        <inlineHelpText>Number of minutes by which clock was extended by the technician</inlineHelpText>
        <label>Extension Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Primary_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Primary Work Order</description>
        <inlineHelpText>Lookup to Primary Work Order</inlineHelpText>
        <label>Primary Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>SPM - Average Response Times (Primary Work Order)</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look to Product</description>
        <inlineHelpText>Look to Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Initial_Response_Time__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Initial Response.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Initial Response.</inlineHelpText>
        <label>SLA Initial Response Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Onsite_Response_Time__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Onsite Response</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Onsite Response</inlineHelpText>
        <label>SLA Onsite Response Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Resolution_Time__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Resolution.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Resolution.</inlineHelpText>
        <label>SLA Resolution Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Restoration_Time__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Restoration.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Restoration.</inlineHelpText>
        <label>SLA Restoration Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look to Service Level Agreement.</description>
        <inlineHelpText>Look to Service Level Agreement.</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look to Contract</description>
        <inlineHelpText>Look to Contract</inlineHelpText>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Delivered_On__c</fullName>
        <description>Date on which Service was Delivered</description>
        <inlineHelpText>Date on which Service was Delivered</inlineHelpText>
        <label>Service Delivered On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service Request</description>
        <inlineHelpText>Lookup to Service Request</inlineHelpText>
        <label>Service Request</label>
        <referenceTo>SVMXC__Service_Request__c</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look to Technician.</description>
        <inlineHelpText>Look to Technician.</inlineHelpText>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look to Work Order.</description>
        <inlineHelpText>Look to Work Order.</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>SPM - Average Response Times</relationshipLabel>
        <relationshipName>SPM_Average_Response_Times1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SPM - Average Response Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Average Response Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>